--- a/app/STUDENT.HELPER/ibase/App.xaml
+++ b/app/STUDENT.HELPER/ibase/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Modern.App"
+﻿<Application x:Class="ibase.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
@@ -11,4 +11,3 @@
         </ResourceDictionary>
     </Application.Resources>
 </Application>
- 
